Friendly Business: Fix the cover h2 alignment

--- a/friendly-business/style-rtl.css
+++ b/friendly-business/style-rtl.css
@@ -3975,6 +3975,21 @@ body.page .main-navigation {
   }
 }
 
+.entry .entry-content .wp-block-cover-image h2.has-text-align-left,
+.entry .entry-content .wp-block-cover h2.has-text-align-left {
+  text-align: right;
+}
+
+.entry .entry-content .wp-block-cover-image h2.has-text-align-center,
+.entry .entry-content .wp-block-cover h2.has-text-align-center {
+  text-align: center;
+}
+
+.entry .entry-content .wp-block-cover-image h2.has-text-align-right,
+.entry .entry-content .wp-block-cover h2.has-text-align-right {
+  text-align: left;
+}
+
 .entry .entry-content .wp-block-cover-image h3,
 .entry .entry-content .wp-block-cover h3 {
   font-size: 1.125em;
